--- a/cosito/src/main/resources/config.properties
+++ b/cosito/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 jndi.bd=jdbc/mysql
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/proyectocoso
-jdbc.username=root
-jdbc.password=
+jdbc.url=jdbc:mysql://localhost:3306/cositoweb
+jdbc.username=adminqiawLU4
+jdbc.password=9EwBv9gCcB7q
 jpa.platform=org.hibernate.dialect.MySQLDialect
